# VWOB

./: .env_example  .gitignore  AuthWebsocket.py  README.md  alpaca_deeplob.py  alpaca_visuals.py  binanceVisuals.py  binanceWebsocket.py  binance_visuals.py  coinbase_visuals.py  final_snapshot.json  krakenVisuals.py  kraken_deeplob.py  kraken_g.py  kraken_mountain.py  kraken_visuals.py  krakenn.py  order_book_snapshots.json  polarstry.py  pyproject.toml  subscribe.py  subscribe_ack.py  visualStuff.py
cnn/cnn_kraken/: CMakeLists.txt  readme.txt  websocket_handler.cpp
snapshots/: order_book_snapshots.json
weights/: model_checkpoint_emergency.weights.h5  model_checkpoint_periodic_31.weights.h5
